<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.matchingSession.initialisation.InitVotingAlertFragment">


    <TextView
        android:id="@+id/alert_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:lineHeight="50dp"
        android:paddingHorizontal="10dp"

        android:rotation="0"
        android:text="@string/initiate_alert_title"
        android:textSize="40sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/initialisation_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:lineHeight="30dp"
        android:paddingHorizontal="20dp"
        android:text="@string/initiate_alert_explanation"
        android:textSize="25sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alert_title"
        app:layout_constraintVertical_bias="0.189" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="48dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/accept_session_initialisation_btn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"

            android:layout_marginBottom="14dp"
            android:paddingVertical="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/btn_like_primary"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:text="@string/confirmation_0"
            android:textSize="30sp"
            app:iconGravity="textStart"
            />

        <TextView
            android:id="@+id/reject_session_initialisation_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/rejection_2"
            android:textAlignment="center"
            android:textColor="@color/app_base_color"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76">

        <ProgressBar
            android:id="@+id/session_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/waiting_to_start_session"
            android:textAlignment="center"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>