<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.userPreferences.UserPreferencesFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferences_title"
        android:textColor="#222222"
        android:textSize="27sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:paddingBottom="7dp"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#CCCCCC"
        app:layout_constraintTop_toBottomOf="@id/title"
        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="500dp"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <FrameLayout
            android:layout_marginTop="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profile_picture_view"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/dummy_username"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_person"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2"
                app:shapeAppearanceOverlay="@style/Circular" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/upload_thumbnail_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"



                android:backgroundTint="@color/black"
                android:gravity="bottom"
                android:paddingHorizontal="10dp"
                android:text="@string/upload_thumbnail"

                android:textSize="20sp"

                app:cornerRadius="10dp"
                android:layout_gravity="center|bottom"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/profile_picture_view"
                app:layout_constraintVertical_bias="1.0" />

        </FrameLayout>

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_username"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upload_thumbnail_btn"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_mail"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upload_thumbnail_btn"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp" />
    </LinearLayout>

        <TextView
            android:id="@+id/remove_account_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="5dp"
            android:text="@string/remove_account_btn_text"
            android:textAlignment="center"
            android:textColor="@color/app_base_color"
            android:textSize="15sp"
            android:textStyle="bold" />

    </FrameLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/go_back_btn"
        app:cornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:backgroundTint="@color/black"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"

        android:padding="0dp"
        android:text="@string/back_btn"
        android:textSize="28sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="606dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

</androidx.constraintlayout.widget.ConstraintLayout>